--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">PhoneSilencer</string>
     <string name="action_settings">Settings</string>
+    <string name="event_post_name">Event Name</string>
+    <string name="start_time_post">Start Time</string>
+    <string name="end_time_post">End Time</string>
+    <string name="time_post">Time</string>
 </resources>
