--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Phone Auto-Silencer</string>
+    <string name="app_name">Phone Auto-Silencer (Premium)</string>
     <string name="action_settings">Settings</string>
     <string name="event_post_name">Event Name</string>
     <string name="start_time_post">Start Time</string>
