--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     <string name="buy_premium_content">You have reached a max amount of events. Buy premium for an unlimited amount of events!</string>
     <string name="buy_premium_positive">BUY PREMIUM</string>
     <string name="buy_premium_negative">CANCEL</string>
+    <string name="market_id">market://details?id=com.justplaingoatappsgmail.phonesilencerpremium</string>
+    <string name="market_id_browser">https://play.google.com/store/apps/details?id=com.justplaingoatappsgmail.phonesilencerpremium</string>
+    <string name="play_store_error">Error: Could not open Android market, please install the market app.</string>
     <string-array name="repeat_array">
         <item>Weekly</item>
         <item>Once</item>
